# i3-tracker-rs

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
src/: error.rs  i3.rs  i3log.rs  log.rs  main.rs  time_tracker.rs  win.rs
