[package]
name = "time-tracker"
version = "0.1.0"
authors = ["Daniel Bruce <dbruce1126@gmail.com>", "Evan Cameron <cameron.evan@gmail.com>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
csv = "1.0.2"
xcb = { version = "0.8", features = ["thread"] }
xdg = "2.1"
fs2 = "0.4"
serde_derive = "1.0"
serde = "1.0"
futures = "0.1"
tokio = "0.1.18"
tokio-signal = "0.2.7"
tokio-i3ipc = { path = "../tokio-i3ipc", version = "0.3.0" }

