[package]
name = "time-tracker"
version = "0.1.0"
authors = ["Daniel Bruce <dbruce1126@gmail.com>", "Evan Cameron <cameron.evan@gmail.com>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
csv = "1.0.7"
xdg = "2.1"
fs2 = "0.4"
serde_derive = "1.0"
serde = "1.0"
log = "0.4"
env_logger = "0.6"
futures = "0.3"
tokio = { version = "0.2", features = ["full"] }
tokio-i3ipc = "0.6"

